--- a/frontend/web/.htaccess
+++ b/frontend/web/.htaccess
@@ -1,8 +1,8 @@
-RewriteEngine on
+RewriteEngine On
 RewriteBase /
 
-# Если запрашиваемая в URL директория или файл существуют обращаемся к ним напрямую
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-# Если нет - перенаправляем запрос на index.php
-RewriteRule . index.php
+
+
+RewriteRule (?!web\/) index.php/$1
