--- a/teacher/web/.htaccess
+++ b/teacher/web/.htaccess
@@ -1,8 +1,7 @@
-RewriteEngine on
+RewriteEngine On
 RewriteBase /teacher
 
-# Если запрашиваемая в URL директория или файл существуют обращаемся к ним напрямую
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-# Если нет - перенаправляем запрос на index.php
-RewriteRule . index.php
+
+RewriteRule . index.php/$1
