--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap4": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "yiisoft/yii2-bootstrap5": "^2.0",
-        "lesha724/yii2-youtube-widget": "*"
+        "lesha724/yii2-youtube-widget": "*",
+        "tuyakhov/yii2-youtube": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
